# wikitext-parser

./: Cargo.toml  README.md
.github/workflows/: ci.yml
src/: error.rs  level_stack.rs  lib.rs  parser.rs  tests.rs  tokenizer.rs  wikitext.rs
src/tests/: full_pages.rs  mod.rs
src/tests/pages/: a.txt  ab.txt  abyssinian.txt  appendix_indo_iranian_swadesh_lists.txt  appendix_slovak_declension_pattern_dlan.txt  arunachal_pradesh.txt  bone.txt  cat.txt  finger.txt  free.txt  help_how_to_edit_a_page.txt  japanese_exist.txt  lady.txt  media_wiki_blockedtext.txt  o.txt  pouta.txt  rhymes_english_aesi.txt  rhymes_english_ik.txt  te.txt  wiktionary_license_discussion.txt  wiktionary_namespace.txt  wiktionary_tea_room.txt  wiktionary_todo_template_language_code_doesnt_match_header.txt  y.txt
src/tokenizer/: mod.rs
