[package]
name = "wikitext-parser"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = {version = "1.0.136", features = ["derive"], optional = true}
regex = "1.5.5"
lazy_static = "1.4.0"

[dev-dependencies]
serde_json = "1.0.81"

[features]
serde = ["dep:serde"]
