[package]
name = "wikitext-parser"
description = "Partial parser for wikitext"
version = "0.1.5"
edition = "2021"
license-file = "LICENSE"
repository = "https://github.com/ISibboI/wikitext-parser"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = {version = "1.0.136", features = ["derive"], optional = true}
regex = "1.6.0"
lazy_static = "1.4.0"
log = "0.4.17"

[dev-dependencies]
serde_json = "1.0.81"

[features]
serde = ["dep:serde"]
