[package]
name = "wikitext-parser"
description = "Partial parser for wikitext"
version = "0.3.3"
edition = "2021"
license-file = "LICENSE"
repository = "https://github.com/ISibboI/wikitext-parser"
rust-version = "1.65.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = {version = "1.0.174", features = ["derive"], optional = true}
regex = "1.9.1"
lazy_static = "1.4.0"
log = "0.4.19"

[dev-dependencies]
serde_json = "1.0.81"

[features]
serde = ["dep:serde"]
